# TESI---Progettazione-di-un-nodo-FastFlow-per-integrazione-di-acceleratori

./: .clang-format  .gitignore  CMakeLists.txt  Esempio di interfacciamento di Kernel da Host per FPGA.cpp  Esempio di interfacciamento di Kernel da Host per FPGA.txt  General.txt  Kernel.cpp  Kernel.txt  Measurements.txt  Metrics commands.txt  README.md  VITIS XILINX, uso con GPU, VM.txt
Code/: Esempio di interfacciamento di Kernel da Host per FPGA.cpp  Kernel Vitis.cpp  vecadd.c
Code/FPGA/: host_vecadd_fpga.cpp
Code/GPU/: general.txt  host_vecadd_gpu  host_vecadd_gpu.c
General/: Struttura Tesi.txt  TESI - Integrazione FPGA in FastFlow.txt
UML/: Component diagram.uml  Deployment diagram.uml  Sequence diagram.uml
cmake/: FindFastFlow.cmake
doc/UML/: Class diagram.uml  Sequence diagram blocks.txt  Sequence diagram.uml
include/: ff_includes.hpp  types.hpp
kernel/: krnl_vadd.cpp
kernels/: complex_op.cl  krnl_vadd.sw_emu.xclbin  polynomial_op.cl
kernels/fpga/: krnl_deep_pipeline_calculation.cpp  krnl_heavy_compute.cpp  krnl_polynomial_op.cpp  krnl_very_complex_op.cpp
kernels/gpu/: deep_pipeline_calculation.cl  deep_pipeline_calculation.metal  heavy_compute_kernel.cl  heavy_compute_kernel.metal  polynomial_op.metal  vecAdd.metal  very_complex_op.cl  very_complex_op.metal
src/: CpuAccelerator.cpp  CpuAccelerator.hpp  CpuParallelRunner.cpp  CpuParallelRunner.hpp  FpgaAccelerator.cpp  FpgaAccelerator.hpp  GpuAccelerator.cpp  GpuAccelerator.hpp  IAccelerator.hpp  OclAccelerator.cpp  OclAccelerator.hpp  StatsCollector.hpp  fastflow_includes.hpp  ff_fastflow_patch.cpp  ff_node_acc_t.cpp  ff_node_acc_t.hpp  main.cpp  vecAdd.cl
src/accelerator/: BufferManager.hpp  FpgaAccelerator.cpp  FpgaAccelerator.hpp  GpuAccelerator.cpp  GpuAccelerator.hpp  Gpu_Metal_Accelerator.hpp  Gpu_Metal_Accelerator.mm  Gpu_OpenCL_Accelerator.cpp  Gpu_OpenCL_Accelerator.hpp  IAccelerator.hpp  ff_node_acc_t.cpp  ff_node_acc_t.hpp
src/common/: PerformanceData.hpp  StatsCollector.hpp  Task.hpp
src/cpu_runner/: CpuParallelRunner.cpp  CpuParallelRunner.hpp  Cpu_FF_Runner.cpp  Cpu_FF_Runner.hpp  Cpu_OMP_Runner.cpp  Cpu_OMP_Runner.hpp  Cpu_ParallelFF_Runner.cpp  Cpu_ParallelFF_Runner.hpp  Cpu_ParallelOMP_Runner.cpp  Cpu_ParallelOMP_Runner.hpp
src/helpers/: BufferManager.cpp  BufferManager.hpp  Helpers.cpp  Helpers.hpp
src/structs/: BlockingQueue.hpp  StatsCollector.hpp
